# CoffeePSX

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: rust.yml
cdrom/: Cargo.toml
cdrom/src/: cdtime.rs  cue.rs  lib.rs  reader.rs
cdrom/src/reader/: chd.rs  cuebin.rs  seekvec.rs
coffeepsx-frontend/src/: app.rs  guistate.rs  main.rs
coffeepsx-frontend/src/emuthread/: renderer.rs
crates/cdrom/: Cargo.toml  README.md
crates/cdrom/src/reader/: cuebin.rs
crates/coffeepsx-frontend/: Cargo.toml
crates/coffeepsx-frontend/src/: app.rs  config.rs  emustate.rs  emuthread.rs  guistate.rs  input.rs  lib.rs  main.rs
crates/coffeepsx-frontend/src/app/: input.rs
crates/coffeepsx-frontend/src/config/: input.rs
crates/coffeepsx-frontend/src/emuthread/: renderer.rs
crates/proc-macros/: Cargo.toml
crates/ps1-core/: Cargo.toml
crates/ps1-core/src/: api.rs  boxedarray.rs  cd.rs  dma.rs  gpu.rs  input.rs  lib.rs  memory.rs  num.rs  pgxp.rs  scheduler.rs  sio.rs  spu.rs  timers.rs
crates/ps1-core/src/cd/: audio.rs  control.rs  fifo.rs  macros.rs  read.rs  response.rs  seek.rs  status.rs
crates/ps1-core/src/cpu/: cp0.rs  icache.rs  instructions.rs
crates/ps1-core/src/cpu/gte/: colors.rs  coordinates.rs  registers.rs
crates/ps1-core/src/gpu/: gp0.rs  rasterizer.rs  registers.rs
crates/ps1-core/src/gpu/rasterizer/: naive.rs  simd.rs  software.rs  wgpuhardware.rs
crates/ps1-core/src/gpu/rasterizer/simd/: avx2.rs
crates/ps1-core/src/gpu/rasterizer/wgpuhardware/: 24bpp.wgsl  blit.rs  draw.rs  draw_common.wgsl  hazards.rs  maskbit.wgsl  sync.rs  vramfill.wgsl
crates/ps1-core/src/mdec/: tables.rs
crates/ps1-core/src/scheduler/: heap.rs
crates/ps1-core/src/sio/: controllers.rs  memcard.rs
crates/ps1-core/src/spu/: adpcm.rs  envelope.rs  reverb.rs  voice.rs
crates/ps1-core/src/spu/voice/: gaussian.rs  interpolate.rs
proc-macros/src/: lib.rs
proc-macros/tests/: lib.rs
ps1-core/: Cargo.toml  README.md
ps1-core/src/: api.rs  boxedarray.rs  bus.rs  cd.rs  control.rs  cpu.rs  dma.rs  gpu.rs  input.rs  interrupts.rs  lib.rs  main.rs  mdec.rs  memory.rs  num.rs  scheduler.rs  sio.rs  spu.rs  timers.rs
ps1-core/src/cd/: audio.rs  control.rs  fifo.rs  macros.rs  read.rs  seek.rs  stat.rs  status.rs  xaadpcm.rs
ps1-core/src/cd/xaadpcm/: tables.rs
ps1-core/src/cpu/: bus.rs  cp0.rs  gte.rs  icache.rs  instructions.rs
ps1-core/src/cpu/gte/: calculation.rs  colors.rs  coordcalc.rs  coordinates.rs  fixedpoint.rs  registers.rs
ps1-core/src/cpu/instructions/: disassemble.rs
ps1-core/src/gpu/: clear.wgsl  gp0.rs  gp1.rs  rasterizer.rs  registers.rs  render.rs
ps1-core/src/gpu/gp0/: rasterize.rs
ps1-core/src/gpu/rasterizer/: naive.rs  render.rs  simd.rs  software.rs  wgpuhardware.rs
ps1-core/src/gpu/rasterizer/simd/: avx2.rs
ps1-core/src/gpu/rasterizer/wgpuhardware/: blit.rs  cpuvramblit.wgsl  draw.rs  draw.wgsl  draw_common.wgsl  hazards.rs  maskbit.wgsl  nativesync.wgsl  scaledsync.wgsl  sync.rs  twentyfour.rs  vramcopy.wgsl  vramcpublit.wgsl
ps1-core/src/scheduler/: heap.rs
ps1-core/src/sio/: controllers.rs  memcard.rs  rxfifo.rs
ps1-core/src/spu/: adpcm.rs  envelope.rs  noise.rs  reverb.rs  voice.rs
ps1-core/src/spu/reverb/: fir.rs
ps1-core/src/spu/voice/: gaussian.rs
ps1-core/src/timers/: tests.rs
ps1-gui/: Cargo.toml
ps1-gui/src/: app.rs  config.rs  emustate.rs  emuthread.rs  guistate.rs  lib.rs  main.rs
ps1-gui/src/emuthread/: audio.rs  render.wgsl  renderer.rs
ps1-runner/: Cargo.toml
ps1-runner/src/: main.rs  renderer.rs  scale.wgsl  shader.wgsl
r3000-emu/: Cargo.toml
r3000-emu/src/: cp0.rs  instructions.rs  lib.rs  main.rs
