[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
bincode = "2.0.0-rc.3"
bytemuck = "1"
cfg-if = "1"
chd = "0.3"
clap = "4"
crc = "3"
ctrlc = "3"
egui = "0.29"
egui_extras = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
proc-bitfield = "0.5"
rand = "0.8"
regex = "1"
rfd = "0.15"
sdl2 = "0.37"
serde = "1"
thiserror = "2"
toml = "0.8"
wgpu = "22"
windows = "0.58"
winit = "0.30"

[profile.dev-fast]
# dev profile with debug symbols disabled, which results in significantly faster compile times
inherits = "dev"
debug = false
opt-level = 1

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[profile.profiling-lto]
inherits = "profiling"
lto = true

[workspace.lints.rust]
rust_2018_idioms = "warn"

[workspace.lints.clippy]
# Warn broadly on all/pedantic, allowing the broad warns to be overridden
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Warn on a small selection of restriction lints
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
try_err = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
verbose_file_reads = "warn"

# Allow pedantic lints that have a high false positive rate or that I disagree with
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
cast_sign_loss = "allow"
enum_glob_use = "allow"
if_not_else = "allow"
inline_always = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
single_match_else = "allow"
stable_sort_primitive = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
unreadable_literal = "allow"
verbose_bit_mask = "allow"
