[package]
name = "ps1-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdrom = { path = "../cdrom" }

bincode = { version = "2.0.0-rc.3", features = ["derive"] }
log = "0.4"
proc-bitfield = "0.3"
rand = "0.8"
thiserror = "1"

[lints]
workspace = true
