[package]
name = "ps1-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdrom = { path = "../cdrom" }

bincode = { workspace = true, features = ["derive"] }
log = { workspace = true }
proc-bitfield = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
