[package]
name = "ps1-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
cdrom = { path = "../cdrom" }
ps1-core = { path = "../ps1-core" }

anyhow = { workspace = true }
bincode = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true, features = ["derive"] }
egui = { workspace = true }
egui_extras = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
regex = { workspace = true }
rfd = { workspace = true }
sdl2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
wgpu = { workspace = true }
windows = { workspace = true, features = ["Win32_Media"] }
winit = { workspace = true }

[lints]
workspace = true
