[package]
name = "ps1-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdrom = { path = "../cdrom" }
ps1-core = { path = "../ps1-core" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
env_logger = "0.11"
log = "0.4"
minifb = "0.25"
rand = "0.8"
rayon = "1"

[lints]
workspace = true
