[package]
name = "ps1-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdrom = { path = "../cdrom" }
ps1-core = { path = "../ps1-core" }

anyhow = "1"
bincode = "2.0.0-rc.3"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
env_logger = "0.11"
log = "0.4"
pollster = "0.3"
rand = "0.8"
thiserror = "1"
wgpu = "0.19"
winit = "0.29"

[lints]
workspace = true
