[package]
name = "ps1-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdrom = { path = "../cdrom" }
ps1-core = { path = "../ps1-core" }

anyhow = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
rand = { workspace = true }
sdl2 = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[lints]
workspace = true
