[package]
name = "ps1-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]

[dependencies]
cdrom = { path = "../cdrom" }
proc-macros = { path = "../proc-macros" }

bincode = { workspace = true, features = ["derive"] }
bytemuck = { workspace = true, features = ["derive"] }
cfg-if = { workspace = true }
log = { workspace = true }
proc-bitfield = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
wgpu = { workspace = true }

[lints]
workspace = true
